@@ -5306,6 +5306,14 @@ TSHttpTxnServerAddrSet(TSHttpTxn txnp, struct sockaddr const* addr)
   }
 }
 
+void
+TSHttpTxnClientIncomingPortSet(TSHttpTxn txnp, int port)
+{
+  sdk_assert(sdk_sanity_check_txn(txnp) == TS_SUCCESS);
+
+  HttpSM *sm = (HttpSM *) txnp;
+  sm->t_state.client_info.port = port;
+}
 
 // [amc] This might use the port. The code path should do that but it
 // hasn't been tested.
