@@ -1,5 +1,7 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.3.1
+  *) [TS-1675] Adding API method TSHttpTxnClientIncomingPortSet
+
   *) [TS-1674] TSStatIntDecrement is broken: the logic is flawed.
 
   *) [TS-1673] Remap with recv port is using the wrong port 
